--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
+fastapi==0.110.0
+uvicorn==0.29.0
+pydantic==2.6.4
+python-multipart==0.0.9
 PyPDF2==3.0.1
-azure-ai-textanalytics==5.3.0  # Optional
-azure-core==1.29.5              # Optional
-python-dotenv==1.0.0
+azure-ai-textanalytics==5.3.0
+azure-core==1.30.1
+
 
